# g2bp

./: .gitignore  README.md  pyproject.toml
g2bp/: __main__.py  functions.py  utils.py
