[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "g2bp"
version = "1.3.0"
description = "G2BP: A GFF to gene BED Converter driven by Protein ID."
dependencies = []
requires-python = ">=3.8"
authors = [
    {name = "tamasakian", email = "tamasakian@gmail.com"}
]
readme = "README.md"